--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "build": "rollup -c",
+    "deploy": "node ./gh-pages.js",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear"
   },
